app/src/home/Playlists.module.css
.outerContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  color: #b6b6d9;
  font-size: 24px;
  flex-direction: column;
  text-align: center;
}

.text {
  margin: 0;
  padding: 0 10px 0 10px;
}

.selectContainer {
  font-size: 24px;
  color: #b6b6d9;
  display: flex;
  justify-content: center;
}

